package baseNoStates;

public final class States{
    // possible states in door requests
    public static final String LOCKED = "locked";
    public static final String UNLOCKED = "unlocked";
}
