package baseNoStates;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.Objects;

public class User  {
  private final String name;
  private final String credential;
  private UserGroup group; // group where the user belongs

  public User(String name, String credential) {
    this.name = name;
    this.credential = credential;
  }
  public UserGroup getGroup() {
    return group;
  }
  public void setGroup(UserGroup group){ this.group = group;}
  public String getCredential() {
    return credential;
  }
  public boolean canSendRequests(LocalDateTime now) { //This function calls class Schedule to check if the User is in a valid timetable
    if (group.getSchedule().isInSchedule(now)){
      return true;
    }
    return false;
  }
  public boolean canBeInSpace(Space space) {
    return group.getPermittedSpace().contains(space);
  }
  public boolean canDoAction(String action) {
    for (String actions: group.getActions()) {
      if (actions.equals(action)){
        return true;
      }
    }
    return false;
  }
  @Override
  public String toString() {
    return "User{name=" + name + ", credential=" + credential + "}";
  }
}
